# trends-engine

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
collectors/: README.md  pyproject.toml
collectors/src/trends_collectors/: __init__.py  base.py  demo_collector.py  hackernews_collector.py  news_collector.py  newsapi_collector.py  orchestrator.py  reddit_collector.py  schema.py
docs/: ARCHITECTURE.md
examples/: quickstart.py
