[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trends-engine"
version = "0.1.0"
description = "AI-powered marketing intelligence platform: trend detection → campaign generation → revenue attribution"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Neelmani Vispute", email = "neil.vispute@gmail.com" }]
keywords = [
    "trends", "marketing", "nlp", "llm", "rag",
    "campaign-generation", "sentiment-analysis",
    "vector-search", "qdrant", "email-marketing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "trends-nlp>=0.1.0",
    "trends-detector>=0.1.0",
    "trends-campaign>=0.1.0",
    "trends-store>=0.1.0",
    "trends-collectors>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.30", "plotly>=5.18"]
api = ["fastapi>=0.110", "uvicorn>=0.27"]
slack = ["slack-bolt>=1.18"]
all = [
    "streamlit>=1.30", "plotly>=5.18",
    "fastapi>=0.110", "uvicorn>=0.27",
    "slack-bolt>=1.18",
    "sentence-transformers>=2.6",
    "anthropic>=0.30",
]

[project.urls]
Homepage = "https://github.com/neelmanivispute/trends-engine"
Repository = "https://github.com/neelmanivispute/trends-engine"
Issues = "https://github.com/neelmanivispute/trends-engine/issues"

[project.scripts]
trends-engine = "trends_engine.cli:main"
