[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trends-collectors"
version = "0.1.0"
description = "Data source connectors for social media and news APIs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Neelmani Vispute", email = "neil.vispute@gmail.com" }]
keywords = ["data-collection", "reddit", "hackernews", "newsapi", "rss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
rss = ["feedparser>=6.0", "beautifulsoup4>=4.12"]
all = ["feedparser>=6.0", "beautifulsoup4>=4.12"]

[project.urls]
Homepage = "https://github.com/neelmanivispute/trends-engine"
Repository = "https://github.com/neelmanivispute/trends-engine"

[tool.hatch.build.targets.wheel]
packages = ["src/trends_collectors"]
